<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>matcher</groupId>
  <artifactId>matcher</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Matcher</name>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  
  <build>
    <plugins>
        <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.2</version>
        </plugin>
        <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>2.22.2</version>
        </plugin>
        <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-assembly-plugin</artifactId>
		    <executions>
		        <execution>
		            <phase>package</phase>
		            <goals>
		                <goal>single</goal>
		            </goals>
		            <configuration>
		                <archive>
		                <manifest>
		                    <mainClass>
		                        matcher.main.ExecuteMatcher
		                    </mainClass>
		                </manifest>
		                </archive>
		                <descriptorRefs>
		                    <descriptorRef>jar-with-dependencies</descriptorRef>
		                </descriptorRefs>
		            </configuration>
		        </execution>
		    </executions>
		</plugin>
    </plugins>
  </build>
  
  <dependencies>
	<dependency>
	    <groupId>com.github.gumtreediff</groupId>
	    <artifactId>client.diff</artifactId>
	    <version>2.1.2</version>
	</dependency>
	<dependency>
	  <groupId>fr.inria.gforge.spoon</groupId>
	  <artifactId>spoon-core</artifactId>
	  <version>8.4.0-beta-2</version>
	</dependency>
	<dependency>
	  <groupId>fr.inria.gforge.spoon.labs</groupId>
	  <artifactId>gumtree-spoon-ast-diff</artifactId>
	  <version>1.27</version>
	</dependency>
	<dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.7.0</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.7.0</version>
        <scope>test</scope>
    </dependency>
    <dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-params</artifactId>
	    <version>5.7.0</version>
	    <scope>test</scope>
	</dependency>
    <dependency>
  		<groupId>org.mockito</groupId>
		<artifactId>mockito-core</artifactId>
		<version>3.7.7</version>
	</dependency>
    <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>1.2.17</version>
    </dependency>
	<dependency>
	    <groupId>commons-cli</groupId>
	    <artifactId>commons-cli</artifactId>
	    <version>1.4</version>
	</dependency>
	<!--
	<dependency>
	    <groupId>evosuite</groupId>
	    <artifactId>evosuite</artifactId>
	    <version>1.0</version>
	    <scope>system</scope>
	    <systemPath>${project.basedir}/../evosuite/master/target/evosuite-master-1.0.6.jar</systemPath>
	</dependency>-->
  </dependencies>
</project>